--- a/ui/src/main/res/values-cs-rCZ/strings.xml
+++ b/ui/src/main/res/values-cs-rCZ/strings.xml
@@ -114,6 +114,7 @@
     <string name="config_save_error">Nelze uložit konfiguraci pro „%1$s“: %2$s</string>
     <string name="config_save_success">Konfigurace pro „%s“ byla úspěšně uložena</string>
     <string name="create_activity_title">Vytvořit WireGuard tunel</string>
+    <string name="delete">Smazat</string>
     <string name="log_viewer_pref_summary">Logy mohou pomoci s debuggingem</string>
     <string name="log_viewer_pref_title">Zobrazit log aplikace</string>
     <string name="log_viewer_title">Log</string>
