--- a/ui/src/main/res/values-de/strings.xml
+++ b/ui/src/main/res/values-de/strings.xml
@@ -213,6 +213,7 @@
     <string name="tunnel_list_placeholder">Füge einen Tunnel mit der blauen Taste hinzu</string>
     <string name="tunnel_name">Tunnelname</string>
     <string name="tunnel_on_error">Tunnel kann nicht eingeschaltet werden (wgTurnOn gab %d zurück)</string>
+    <string name="tunnel_dns_failure">DNS-Hostname kann nicht aufgelöst werden: „%s“</string>
     <string name="tunnel_rename_error">Kann Tunnel nicht umbenennen: %s</string>
     <string name="tunnel_rename_success">Tunnel erfolgreich in „%s “ umbenannt</string>
     <string name="type_name_go_userspace">Go userspace</string>
