Import tunnel from an QR image stored on the device.
Add a new feature to import a tunnel from a saved QR image,
this feature integrates into 'import from file' flow,
however adds a condition, if file is an image, attempt to parse it as QR image file.

My use case for this feature, is to allow easier sharing of tunnels to family.
Scanning QR code is ok when you have an external display to show it, but if you sent QR code to someone, there is no way to import it in the app.
If you share a config file, that becomes way harder for a non-technical person to import as now they need to find a file with that name in the file picker etc etc,
Where the images are very visible in the file picker, and user can easily recognize it for import.

Testing:
- Click "+" blue button, try to import a valid `.conf` file - the 'original' file flow should not be affected
- Click "+" blue button, try to import a valid QR code image - if QR code was parsed, then a new tunnel will be added.
- Click "+" blue button, try to import an invalid QR code image - Error message will be shown

Signed-off-by: Nikita Pustovoi <deishelon@gmail.com>

--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -80,6 +80,8 @@
     <string name="bad_config_reason_unknown_section">Unknown section</string>
     <string name="bad_config_reason_value_out_of_range">Value out of range</string>
     <string name="bad_extension_error">File must be .conf or .zip</string>
+    <string name="error_no_qr_found">Barcode was not found in the image</string>
+    <string name="error_qr_checksum">Barcode checksum verification failed</string>
     <string name="cancel">Cancel</string>
     <string name="config_delete_error">Cannot delete configuration file %s</string>
     <string name="config_exists_error">Configuration for “%s” already exists</string>
