--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -238,4 +238,8 @@
     <string name="biometric_auth_error">Authentication failure</string>
     <string name="biometric_auth_error_reason">Authentication failure: %s</string>
     <string name="tooltip_tunnel_shortcut">Add shortcuts</string>
+    <string name="shortcut_label_short_up">%s UP</string>
+    <string name="shortcut_label_long_up">Tunnel %s up</string>
+    <string name="shortcut_label_short_down">%s DOWN</string>
+    <string name="shortcut_label_long_down">Tunnel %s down</string>
 </resources>
